--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,14 +26,15 @@
     "@vue/eslint-config-prettier": "^10.2.0",
     "@vue/eslint-config-typescript": "^14.6.0",
     "@vue/tsconfig": "^0.8.1",
-    "autoprefixer": "^10.4.21",
+    "autoprefixer": "^10.4.16",
     "eslint": "^9.38.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
     "eslint-plugin-vue": "^10.5.1",
-    "postcss": "^8.5.6",
+    "postcss": "^8.4.31",
+    "postcss-load-config": "^6.0.1",
     "prettier": "^3.6.2",
-    "tailwindcss": "^4.1.15",
+    "tailwindcss": "^3.3.5",
     "typescript": "~5.9.3",
     "vite": "^7.1.7",
     "vue-tsc": "^3.1.0"
