--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,8 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@vueform/multiselect": "^2.6.11",
+    "@vuepic/vue-datepicker": "^11.0.3",
     "apexcharts": "^5.3.5",
     "axios": "^1.12.2",
     "pinia": "^3.0.3",
